--- a/about/index.html
+++ b/about/index.html
@@ -54,13 +54,35 @@
 	  <h1>About Us</h1>
 
 
+
+
 <p>Privacy Discussions in Toronto started with the desire to have accessible, friendly, and practical conversations about digital privacy, and to encourage those conversations outside of the typical tech sphere. It&rsquo;s easy for tech talks to become intimidating or inaccessible, but our goal is to connect people who are interested in digital privacy issues and to provide a space to discuss, learn, and demystify.</p>
 
 <p>Tech spaces can also look pretty homogenous, and we want to disrupt that. Toronto Privacy Discussions will always be for people of all ages, backgrounds, and technical abilities, and we want to encourage individuals from groups typically underrepresented in tech to be conversation leaders, welcomed participants, and to shape with us the topics or formats for future privacy discussions.</p>
 
 <p>We&rsquo;re a pretty new group, so if you have an idea about how you want these conversations to unfold, give us a shout and let&rsquo;s make it happen.</p>
 
-<p>You can contact <a href="https://twitter.com/tenacioustek">@tenacioustek</a> for questions or comments.</p>
+<h2 id="faq">FAQ</h2>
+
+<h3 id="why-did-you-start-this-group">Why did you start this group?</h3>
+
+<p>We think that more people should be talking about technology, and in particular, about digital privacy, in a more casual and fun way. We want people to feel comfortable and confident talking about the technology, platforms and services that we use every day, and the impact these services have on our digital privacy. We&rsquo;re volunteers and friends who decided to start this group and see who else wanted to turn up.</p>
+
+<h3 id="who-are-these-meetings-for">Who are these meetings for?</h3>
+
+<p>Anyone and everyone interested in talking about digital privacy and following our <a href="/codeofconduct/">code of conduct</a>. If you&rsquo;re interested, you&rsquo;re welcome.</p>
+
+<h3 id="no-seriously-who-is-this-for-do-i-need-any-technical-knowledge">No, seriously, who is this for? Do I need any technical knowledge?</h3>
+
+<p>No experience is required! We will try to keep our workshops interesting and relevant to everyone. We will sometimes have themes for our meetups, and we also welcome suggestions for future topics. If you don&rsquo;t usually go to &lsquo;tech things&rsquo;, and aren&rsquo;t sure if this could be your thing&hellip; it could totally be your thing. (If you <em>do</em> usually go to tech things, and aren&rsquo;t sure if this could be your thing, it also could totally be your thing.)</p>
+
+<h3 id="how-do-i-get-involved">How do I get involved?</h3>
+
+<p>Do you have an idea for a future session, a question, comment, criticism, or want to help us plan our next event? Email us at <a href="mailto:torontoprivacy@protonmail.com">torontoprivacy@protonmail.com</a>, or reach out to <a href="https://twitter.com/tenacioustek">@tenacioustek</a> on Twitter.</p>
+
+<h3 id="i-might-want-to-get-involved-but-i-m-not-sure-i-have-some-questions-i-don-t-understand-everything-on-your-site">I might want to get involved, but I&rsquo;m not sure/I have some questions/I don&rsquo;t understand everything on your site.</h3>
+
+<p>Send us an email or a Twitter message. We are happy to answer any questions you might have.</p>
 
 
         </div>
