--- a/resources/index.html
+++ b/resources/index.html
@@ -57,15 +57,15 @@
 <p>Here is a non-exhaustive list of resources on privacy and security:</p>
 
 <ul>
-<li><p><a href="https://ssd.eff.org/">EFF Surveillance Self-Defense Guide</a> contains security guides with interesting list of guides depending on your profile (like <a href="https://ssd.eff.org/en/playlist/activist-or-protester">protester</a> or <a href="https://ssd.eff.org/en/playlist/lgbtq-youth">LGBTQ2SI</a>)</p></li>
+<li><p><a href="https://hackblossom.org/cybersecurity/">A DIY Guide to Feminist Cybersecurity</a> breaks down different terms and topics and explains privacy considerations in an accessible format. Topics range from social media to phones to anonymous web browsing, and include links to many other resources. It&rsquo;s a great read.</p></li>
+
+<li><p><a href="https://ssd.eff.org/">EFF Surveillance Self-Defense Guide</a> is an extensive yet (fairly) easy-to-read collection of tutorials and guides for a variety of situations. Are you a <a href="https://ssd.eff.org/en/playlist/activist-or-protester">protester</a>? Want to read their <a href="https://ssd.eff.org/en/module/facebook-groups-reducing-risks">advice on Facebook groups</a>?  Interested in their <a href="https://ssd.eff.org/en/playlist/lgbtq-youth">LGBTQ2SI</a>) guide? Or just want a guide to <a href="https://ssd.eff.org/en/module/creating-strong-passwords">picking a secure password</a>, using PGP, deleting files safely, or encrypting your phone? It&rsquo;s all there.</p></li>
 
 <li><p><a href="https://securityinabox.org/">Security In a Box Guide</a> is an in-depth security guide with detailed instructions on how to use tools for your operating system</p></li>
 
-<li><p><a href="https://myshadow.org/">My Shadow</a> is a web portal explaining how we let digital traces online and how to avoid it (including an amazing <a href="https://myshadow.org/lost-in-small-print/googles-privacy-policy">Privacy Policy reader</a> and a list of <a href="https://myshadow.org/resources">interesting apps</a>)</p></li>
+<li><p><a href="https://myshadow.org/">My Shadow</a> is a web portal explaining how we leave digital traces online, and how to avoid doing it (including an amazing <a href="https://myshadow.org/lost-in-small-print/googles-privacy-policy">Privacy Policy reader</a> and a list of <a href="https://myshadow.org/resources">interesting apps</a>)</p></li>
 
 <li><p><a href="https://prism-break.org/en/all/">PRISM Break</a> proposes alternatives to important hosting companies for your systems and data</p></li>
-
-<li><p><a href="https://hackblossom.org/cybersecurity/">A DIY Guide to Feminist Cybersecurity</a> is gathering advices and link to resources to help protect your privacy and security</p></li>
 </ul>
 
 
